Fixed chart overflow issue

--- a/packages/perspective-viewer-highcharts/src/less/highcharts.less
+++ b/packages/perspective-viewer-highcharts/src/less/highcharts.less
@@ -28,6 +28,16 @@
         position: relative;
         width: 100%;
         height: 100%;
+        min-width: 0;
+        min-height: 0;
+    }
+
+    .chart:last-child:first-child {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right:0;
+        bottom:0;
     }
 
     tspan,
